# Lab-6

./: CMakeLists.txt  Dockerfile  README.md  docker_run.sh  setup.py  test_bindings.py  test_cython.py
datafiles/: estradiol.sdf  estradiol_poses.sdf
include/: clashes.h
python/: bindings.cpp
src/: clashes.cpp  main.cpp
src/cython/: clash.pxd  clash.pyx
utility/: make_random_poses.py
